--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
+h2 {
+  font-family: 'Bebas Neue', cursive;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  font-family: 'Montserrat', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img {
+  max-width: 100%;
+}
+
+.left-50 {
+  position: relative;
+  left: 10%;
+}
+
+input:focus,
+input:active {
+  background: #fff;
+}
+
+input:-internal-autofill-selected {
+  appearance: menulist-button;
+  background-color: none !important;
+  background-image: none !important;
+  color: none !important;
 }
